# cargo-vendor

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: before-deploy.sh
src/: main.rs  registry.rs
tests/: vendor.rs
