[package]
name = "cargo-vendor"
version = "0.1.23"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["subcommand"]
repository = "https://github.com/alexcrichton/cargo-vendor"
description = """
A Cargo subcommand to vendor all crates.io dependencies onto the local
filesystem.
"""

[dependencies]
cargo = "0.33.0"
docopt = "1.1.0"
env_logger = "0.6.1"
serde = "1.0.90"
serde_derive = "1.0.89"
serde_json = "1.0.39"
toml = "0.5.0"
failure = "0.1.5"
openssl = { version = '0.10.20', optional = true }

[dev-dependencies]
once_cell = "0.1"

[features]
vendored-openssl = ['openssl/vendored']
