[package]
name = "cargo-vendor"
version = "0.1.23"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["subcommand"]
repository = "https://github.com/alexcrichton/cargo-vendor"
description = """
A Cargo subcommand to vendor all crates.io dependencies onto the local
filesystem.
"""
edition = "2018"

[dependencies]
cargo = "0.35.0"
docopt = "1.1.0"
env_logger = "0.6.1"
serde = { version = "1.0.92", features = ['derive'] }
serde_json = "1.0.39"
toml = "0.5.1"
failure = "0.1.5"
openssl = { version = '0.10.23', optional = true }

[dev-dependencies]
once_cell = "0.1"

[features]
vendored-openssl = ['openssl/vendored']
